Fix alignments

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -3,7 +3,7 @@
 }
 
 img {
-  margin-top: 10%;
+  margin-top: 5%;
   margin-bottom: 10%;
   margin-left: 10%;
   display: inline-block;
@@ -32,6 +32,7 @@ a {
 }
 
 .logo {
+  margin-top: 0;
   text-align: center;
 }
 
